--- a/distro/configuration/addresshierarchy/addresshierarchy_en.properties
+++ b/distro/configuration/addresshierarchy/addresshierarchy_en.properties
@@ -1,5 +1,5 @@
-addresshierarchy.ethiopia=Ethiopia
+Addresshierarchy.ethiopia=Ethiopia
 Location.country=Country
 Location.province=Region
 Location.district=Zone/Sub-City
-Location.village=Worda
+Location.village=Woreda
